--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      </div>
      <ul>
         <li>
-            <a href="#">Preencha aqui 1</a>
+            <a href="https://www.gov.br/pt-br" target="_blank">Preencha aqui 1</a>
         </li>
 
         <li>
