--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <p>@GabrielZimm</p>
                 </div>
 
+            <div id="switch">
+                <button></button>
+                <span></span>
+            </div>    
                 <ul>
                     <li>
                         <a href="https://www.gov.br/pt-br" target="_blank">GOV.BR</a>
