--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br">
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
                     <p>@GabrielZimm</p>
                 </div>
 
-            <div id="switch">
+            <div id="switch" onclick="toggleMode()">
                 <button></button>
                 <span></span>
             </div>    
@@ -72,7 +72,10 @@
                 </footer>
 
                 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-                <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+                <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+                ></script>
+
+                <script src="script.js"></script>
             </div>
         </div>
     </body>
